# smallfolly

./: .gitmodules  CMakeLists.txt
cmake/: smallfolly-config.cmake
config/folly/: folly-config.h
patches/: all.patch  cant-use-futex-bitset.txt  no-coroutines.txt  patch.txt  remove_glog.txt  stub-logging.txt  stub-logging2.txt  stub.txt
stub/: logging.h
